--- a/src/shared/i18n/messages/ko/caro-kann.json
+++ b/src/shared/i18n/messages/ko/caro-kann.json
@@ -17,6 +17,15 @@
   },
   "tutorials": {
     "title": "튜토리얼 : 장바구니 만들기",
-    "description": "이 튜토리얼에서는 React 환경에서 Caro-Kann 라이브러리를 활용하여 간단하면서도 실용적인 장바구니 기능을 구현하는 과정을 안내합니다. Caro-Kann이 제공하는 직관적인 상태 관리 방식과 강력한 미들웨어 시스템을 통해 어떻게 효율적으로 상태를 다루고, 다양한 부가 기능을 손쉽게 통합할 수 있는지 배우게 됩니다.<br></br>이 튜토리얼은 React에 대한 기본적인 이해가 있는 개발자를 대상으로 하며, Caro-Kann의 핵심 개념과 실제 사용법을 익혀 실제 프로젝트에 적용할 수 있도록 돕는 것을 목표로 합니다."
+    "description": "이 튜토리얼에서는 React 환경에서 Caro-Kann 라이브러리를 활용하여 간단하면서도 실용적인 장바구니 기능을 구현하는 과정을 안내합니다. Caro-Kann이 제공하는 직관적인 상태 관리 방식과 강력한 미들웨어 시스템을 통해 어떻게 효율적으로 상태를 다루고, 다양한 부가 기능을 손쉽게 통합할 수 있는지 배우게 됩니다.<br></br><br></br>이 튜토리얼은 React에 대한 기본적인 이해가 있는 개발자를 대상으로 하며, Caro-Kann의 핵심 개념과 실제 사용법을 익혀 실제 프로젝트에 적용할 수 있도록 돕는 것을 목표로 합니다.",
+    "createStore": {
+      "title": "store 만들기",
+      "0": "애플리케이션의 상태 관리를 시작하기 전에, 먼저 우리가 다룰 데이터의 구조를 정의하는 것이 좋습니다. 여기서는 장바구니에 담길 '제품(Product)'의 속성을 명확히 하기 위해 TypeScript 타입을 생성합니다. 각 제품은 고유 id, name, price를 필수적으로 가지며, 선택적으로 imageUrl과 description을 포함할 수 있도록 정의합니다. 이렇게 타입을 미리 정의하면 개발 과정에서 발생할 수 있는 데이터 관련 오류를 줄이고 코드의 가독성과 유지보수성을 높일 수 있습니다.",
+      "1": "다음으로, caro-kann 라이브러리에서 <cd>create</cd> 함수를 가져와 전역 상태 저장소(store)를 생성합니다. create 함수는 초기 상태값을 인자로 받아, 해당 상태를 관리할 수 있는 커스텀 훅(hook)을 반환합니다. 이 예제에서는 빈 배열 []을 초기 상태로 설정하여, 처음에는 장바구니가 비어있음을 나타냅니다. <cd>create'<'Array'<'Product'>>'([])</cd> 호출 결과로 반환된 <cd>useCart</cd> 훅은 이제 우리 애플리케이션의 모든 컴포넌트에서 장바구니 상태에 접근하고 이를 변경하는 데 사용될 핵심 인터페이스가 됩니다."
+    },
+    "useCart": {
+      "title": "useCart로 전역 상태 변경하기",
+      "0": "이제 생성한 useCart 훅을 사용하여 실제 컴포넌트에서 장바구니 상태를 변경하는 방법을 살펴보겠습니다.<br></br><br></br>먼저 ProductBinder 컴포넌트는 서버로부터 받아온 제품 목록(productList)을 props로 받아, 각 제품에 대해 ProductCard 컴포넌트를 렌더링하는 역할을 합니다. 이는 일종의 리스트 렌더러로, 여러 제품 정보를 화면에 표시하기 위한 컨테이너 역할을 수행합니다."
+    }
   }
 }
