--- a/src/shared/i18n/messages/ko/caro-kann.json
+++ b/src/shared/i18n/messages/ko/caro-kann.json
@@ -13,11 +13,11 @@
       "6": "여러 <cd>useStore</cd>를 하나로 병합하는 유틸리티 함수 merge가 추가되었습니다. 이를 통해 개발자는 `선택자 함수 + adaptor`를 사용한 top-down 방식으로도, `merge`를 사용한 Bottom-up 방식으로도 유연하게 상태를 구성할 수 있게 되었습니다. 각 방식은 컴포넌트 구조나 데이터 흐름에 따라 선택적으로 적용할 수 있어, 다양한 아키텍처 요구사항에 효과적으로 대응할 수 있습니다. 전체적으로 이번 업데이트는 일관성과 확장성을 모두 고려한 개선으로, 실제 개발 환경에서의 생산성과 유지보수성을 크게 향상시킵니다."
     },
     "installation": "설치 방법",
-    "installationBody": "Caro-Kann은 아래의 다양한 방법으로 설치할 수 있습니다."
+    "installationBody": "caro-kann은 아래의 다양한 방법으로 설치할 수 있습니다."
   },
   "tutorials": {
     "title": "튜토리얼 : 장바구니 만들기",
-    "description": "이 튜토리얼에서는 React 환경에서 Caro-Kann 라이브러리를 활용하여 간단하면서도 실용적인 장바구니 기능을 구현하는 과정을 안내합니다. Caro-Kann이 제공하는 직관적인 상태 관리 방식과 강력한 미들웨어 시스템을 통해 어떻게 효율적으로 상태를 다루고, 다양한 부가 기능을 손쉽게 통합할 수 있는지 배우게 됩니다.<br></br><br></br>이 튜토리얼은 React에 대한 기본적인 이해가 있는 개발자를 대상으로 하며, Caro-Kann의 핵심 개념과 실제 사용법을 익혀 실제 프로젝트에 적용할 수 있도록 돕는 것을 목표로 합니다.",
+    "description": "이 튜토리얼에서는 React 환경에서 caro-kann 라이브러리를 활용하여 간단하면서도 실용적인 장바구니 기능을 구현하는 과정을 안내합니다. caro-kann이 제공하는 직관적인 상태 관리 방식과 강력한 미들웨어 시스템을 통해 어떻게 효율적으로 상태를 다루고, 다양한 부가 기능을 손쉽게 통합할 수 있는지 배우게 됩니다.<br></br><br></br>이 튜토리얼은 React에 대한 기본적인 이해가 있는 개발자를 대상으로 하며, caro-kann의 핵심 개념과 실제 사용법을 익혀 실제 프로젝트에 적용할 수 있도록 돕는 것을 목표로 합니다.",
     "createStore": {
       "title": "store 만들기",
       "0": "애플리케이션의 상태 관리를 시작하기 전에, 먼저 우리가 다룰 데이터의 구조를 정의하는 것이 좋습니다. 여기서는 장바구니에 담길 '제품(Product)'의 속성을 명확히 하기 위해 TypeScript 타입을 생성합니다. 각 제품은 고유 id, name, price를 필수적으로 가지며, 선택적으로 imageUrl과 description을 포함할 수 있도록 정의합니다. 이렇게 타입을 미리 정의하면 개발 과정에서 발생할 수 있는 데이터 관련 오류를 줄이고 코드의 가독성과 유지보수성을 높일 수 있습니다.",
@@ -27,7 +27,7 @@
       "title": "useCart로 전역 상태 변경하기",
       "0": "이제 생성한 <cd>useCart</cd> 훅을 사용하여 실제 컴포넌트에서 장바구니 상태를 변경하는 방법을 살펴보겠습니다.<br></br><br></br>먼저 <cd>ProductBinder</cd> 컴포넌트는 서버로부터 받아온 제품 목록(<cd>productList</cd>)을 props로 받아, 각 제품에 대해 <cd>ProductCard</cd> 컴포넌트를 렌더링하는 역할을 합니다. 이는 일종의 리스트 렌더러로, 여러 제품 정보를 화면에 표시하기 위한 컨테이너 역할을 수행합니다.",
       "1": "이 컴포넌트 내부에서 <cd>useCart()</cd> 훅을 호출하면, React의 <cd>useState</cd> 훅과 유사하게 현재 장바구니 상태(<cd>cart</cd>)와 상태를 변경할 수 있는 함수(<cd>setCart</cd>)를 담은 튜플을 반환받습니다.",
-      "2": "'Add to Cart' 버튼의 <cd>onClick</cd> 핸들러에서는 <cd>setCart</cd> 함수를 사용합니다. 이때, 이전 상태(<cd>prev</cd>)를 받아 새로운 제품(<cd>product</cd>)을 배열의 끝에 추가한 새로운 배열을 반환하는 함수형 업데이트 방식을 사용합니다 (<cd>setCart(prev => [...prev, product])</cd>). 이는 상태의 불변성을 유지하는 좋은 패턴이며, React가 변경 사항을 감지하고 UI를 효율적으로 업데이트하는 데 도움을 줍니다.<br></br><br></br>하지만 <cd>ProductBinder</cd> 컴포넌트의 현재 구현을 보면, 장바구니의 내용을 화면에 표시하지는 않습니다. 즉, <cd>cart</cd> 상태값을 직접 읽을 필요는 없고, 오직 <cd>setCart</cd>함수를 통해 장바구니에 아이템을 추가하는 기능만 수행합니다. 이런 경우, 컴포넌트가 장바구니 상태가 변경될 때마다 불필요하게 리렌더링되는 것을 방지하기 위해 최적화를 고려할 수 있습니다.<br></br><br></br>Caro-Kann은 이러한 상황을 위해 <cd>useCart</cd> 훅에 내장된 <cd>writeOnly</cd> 메서드를 제공합니다. <cd>useCart.writeOnly()</cd>를 사용하면 상태 값 자체는 가져오지 않고, 오직 상태를 변경하는 함수(<cd>setCart</cd>에 해당)만을 반환받습니다.",
+      "2": "'Add to Cart' 버튼의 <cd>onClick</cd> 핸들러에서는 <cd>setCart</cd> 함수를 사용합니다. 이때, 이전 상태(<cd>prev</cd>)를 받아 새로운 제품(<cd>product</cd>)을 배열의 끝에 추가한 새로운 배열을 반환하는 함수형 업데이트 방식을 사용합니다 (<cd>setCart(prev => [...prev, product])</cd>). 이는 상태의 불변성을 유지하는 좋은 패턴이며, React가 변경 사항을 감지하고 UI를 효율적으로 업데이트하는 데 도움을 줍니다.<br></br><br></br>하지만 <cd>ProductBinder</cd> 컴포넌트의 현재 구현을 보면, 장바구니의 내용을 화면에 표시하지는 않습니다. 즉, <cd>cart</cd> 상태값을 직접 읽을 필요는 없고, 오직 <cd>setCart</cd>함수를 통해 장바구니에 아이템을 추가하는 기능만 수행합니다. 이런 경우, 컴포넌트가 장바구니 상태가 변경될 때마다 불필요하게 리렌더링되는 것을 방지하기 위해 최적화를 고려할 수 있습니다.<br></br><br></br>caro-kann은 이러한 상황을 위해 <cd>useCart</cd> 훅에 내장된 <cd>writeOnly</cd> 메서드를 제공합니다. <cd>useCart.writeOnly()</cd>를 사용하면 상태 값 자체는 가져오지 않고, 오직 상태를 변경하는 함수(<cd>setCart</cd>에 해당)만을 반환받습니다.",
       "3": "이를 통해 <cd>ProductBinder</cd> 컴포넌트는 장바구니의 현재 상태 변화에는 구독하지 않게 되어, 오직 제품을 추가하는 역할만 수행하면서도 불필요한 리렌더링을 피할 수 있습니다. 이는 특히 상태 변경이 잦거나 많은 컴포넌트가 동일한 상태를 공유할 때 성능 향상에 기여할 수 있는 유용한 최적화 기법입니다."
     },
     "readOnly": {
@@ -48,6 +48,58 @@
         "0": "<cd>items</cd>: 현재 장바구니에 담긴 상품 객체들의 배열입니다.",
         "1": "<cd>priceTotal</cd>: <cd>items</cd> 배열의 각 <cd>product.price</cd>를 합산한 총액입니다."
       }
+    },
+    "middleware": {
+      "title": "미들웨어 합성으로 장바구니 백업 및 동작 확인",
+      "0": "caro-kann의 강력한 기능 중 하나는 미들웨어를 손쉽게 합성하여 스토어의 기능을 확장할 수 있다는 점입니다. 여기서는 장바구니 상태를 브라우저에 유지하고, 상태 변경을 쉽게 추적할 수 있도록 persist와 logger 미들웨어를 적용해 보겠습니다.",
+      "subtitle1": "1. persist 미들웨어로 장바구니 상태 유지하기",
+      "1": "기본적으로 웹 애플리케이션의 상태는 페이지를 새로고침하거나 브라우저를 닫으면 초기화됩니다. 사용자가 장바구니에 담은 상품들이 사라지지 않도록 하려면 상태를 어딘가에 저장해야 합니다. persist 미들웨어는 이러한 상태 영속성 관리를 매우 간단하게 만들어줍니다.<br></br><br></br>persist 미들웨어는 상태가 변경될 때마다 지정된 스토리지(예: localStorage)에 자동으로 데이터를 저장하고, 애플리케이션이 다시 로드될 때 저장된 데이터를 불러와 상태를 복원합니다. 다음은 persist 미들웨어를 useCart 스토어에 적용하는 방법입니다.",
+      "subtitle2": "2. logger 미들웨어로 상태 변경 추적하기",
+      "2": "개발 과정에서 상태가 어떻게 변경되는지, 어떤 액션에 의해 변경이 일어났는지 등을 파악하는 것은 디버깅에 매우 중요합니다. logger 미들웨어는 상태 변경과 관련된 정보를 콘솔에 출력하여 이러한 과정을 쉽게 추적할 수 있도록 도와줍니다.<br></br><br></br>logger 미들웨어는 persist 미들웨어와 함께 합성하여 사용할 수 있습니다. 미들웨어는 함수를 감싸는 형태로 적용되므로, 안쪽부터 바깥쪽 순서로 실행된다고 생각할 수 있습니다. 즉, 상태 변경이 일어나면 logger가 먼저 동작하고, 그 다음 persist가 동작합니다.",
+      "3": "이제 장바구니에 상품을 추가하거나 제거할 때마다 브라우저 콘솔에 관련 로그가 출력되어, 상태 변경 과정을 명확하게 확인할 수 있습니다. logger의 옵션을 조정하여 필요한 정보만 선택적으로 볼 수도 있습니다."
+    },
+    "merge": {
+      "title": "merge로 여러 스토어 합치기",
+      "0": "애플리케이션의 규모가 커지면, 관련된 상태들을 별도의 스토어로 분리하여 관리하는 것이 더 효율적일 수 있습니다. 예를 들어, 장바구니 상태는 <cd>useCart</cd> 스토어에서, 사용자 프로필 정보는 <cd>useProfile</cd> 스토어에서 각각 관리할 수 있습니다.<br></br><br></br>caro-kann은 이렇게 분리된 여러 스토어를 하나의 통합된 훅으로 편리하게 사용하고 관리할 수 있도록 <cd>merge</cd> 유틸리티를 제공합니다. <cd>merge</cd>는 여러 스토어 훅을 입력받아, 각 스토어의 상태와 세터(setter) 함수에 접근할 수 있는 새로운 훅을 반환합니다.<br></br><br></br>먼저, 개별 스토어를 정의합니다. 여기서는 장바구니(<cd>useCart</cd>)와 사용자 프로필(<cd>useProfile</cd>) 스토어를 예시로 사용합니다. User 타입도 정의해야 합니다.",
+      "1": "이제 <cd>merge</cd> 유틸리티를 사용하여 <cd>useCart</cd>와 <cd>useProfile</cd> 스토어를 하나로 합칩니다. <cd>merge</cd> 함수에 객체를 전달하며, 각 키는 합쳐진 스토어에서 사용될 이름이 되고 값은 해당 스토어 훅이 됩니다.",
+      "2": "이렇게 생성된 <cd>useProfileAndCart</cd> 훅을 사용하면, 마치 하나의 큰 스토어를 다루는 것처럼 각 스토어의 상태와 세터 함수에 접근할 수 있습니다.<br></br><br></br>예를 들어, 컴포넌트 내에서 다음과 같이 사용할 수 있습니다."
+    },
+    "finishing": {
+      "title": "마무리하며: caro-kann과 함께하는 효율적인 상태 관리",
+      "0": "지금까지 caro-kann 라이브러리를 활용하여 기본적인 장바구니 기능을 구현하는 과정을 함께 살펴보았습니다. 이 튜토리얼을 통해 <cd>create</cd> 함수로 스토어를 생성하고, <cd>useCart</cd> 훅을 통해 상태를 읽고 업데이트하는 방법, <cd>writeOnly</cd>와 <cd>readOnly</cd> 메서드를 사용한 최적화, 그리고 <cd>selector</cd>를 활용한 파생 상태 관리 방법을 익혔습니다. 또한, <cd>persist</cd>와 <cd>logger</cd> 미들웨어를 합성하여 스토어의 기능을 손쉽게 확장하고, <cd>merge</cd> 유틸리티로 여러 스토어를 통합적으로 관리하는 방법도 알아보았습니다.<br></br><br></br>여기서 다룬 내용들은 caro-kann이 제공하는 다양한 기능의 일부에 불과합니다. 실제 애플리케이션 개발에서는 더욱 복잡한 상태 로직, 고급 미들웨어 활용 등 다양한 시나리오와 마주하게 될 것입니다. caro-kann은 이러한 고급 요구사항들을 충족시킬 수 있는 강력하고 유연한 기능들을 제공하며, 개발자가 상태 관리를 더욱 효율적이고 직관적으로 다룰 수 있도록 돕습니다.<br></br><br></br>더 깊이 있는 학습과 caro-kann의 모든 잠재력을 확인하고 싶다면, 공식 문서를 참조하시는 것을 적극 권장합니다. 공식 문서에서는 이 튜토리얼에서 다루지 못한 다양한 API, 고급 사용 패턴, 그리고 실제 프로덕션 환경에서의 모범 사례들을 자세히 안내하고 있습니다. caro-kann과 함께 더욱 즐겁고 생산적인 상태 관리 경험을 만들어가시길 바랍니다."
+    }
+  },
+  "create-store": {
+    "title": "store 만들기",
+    "0": "caro-kann에서 store는 전역 상태가 저장되어있는 외부 공간으로 정의됩니다. 이러한 store를 만들기 위해서는 caro-kann이 제공하는 <cd>create</cd> 함수를 사용해야 합니다. 이 함수는 상태의 초기값을 매개변수로 받아 이를 내부 store에 저장하고 <cd>useStore</cd> 훅을 리턴합니다.<br></br><br></br><cd>create</cd> 함수는 반드시 컴포넌트 외부에서 호출해야 합니다. 컴포넌트 내부에서 호출하면 컴포넌트가 리렌더링될 때마다 새로운 store가 생성되어 이전 상태가 소실됩니다. 이는 전역 상태 관리의 목적에 반하는 동작이므로 각별히 주의해야 합니다.",
+    "1": "<cd>useStore</cd> 훅은 <cd>create</cd> 함수를 통해 만들어진 store에 접근할 수 있는 유일한 방법이며, 리액트의 <cd>useState</cd> 훅과 동일하게 <cd>[ value, setValue ]</cd> 로 이루어진 튜플을 리턴합니다."
+  },
+  "basic-usage": {
+    "title": "useStore의 기본 사용법",
+    "0": "앞서 살펴본 바와 같이 <cd>useStore</cd>는 리액트의 <cd>useState</cd> 훅과 동일하게 <cd>[ value, setValue ]</cd> 로 이루어진 튜플을 리턴합니다. 따라서 리액트에 익숙한 개발자라면 누구라도 쉽게 <cd>useStore</cd>를 사용할 수 있습니다.",
+    "subtitle1": "선택자 함수",
+    "1": "위에서 살펴본 코드는 한 가지 문제를 안고 있습니다. 컴포넌트 내에서 필요한 상태는 email과 name, 그리고 phoneNumber이지만, <cd>useStore</cd>는 전체 store를 구독하고 있다는 사실입니다. 따라서 다른 곳에서 age 값이 변경될 경우, age 값이 필요하지 않은 <cd>ProfileCard</cd> 컴포넌트도 리랜더링 될 것입니다.<br></br><br></br>이러한 문제를 해결하기 위해 <cd>useStore</cd> 훅은 선택자 함수를 인자로 받을 수 있습니다. 선택자 함수를 사용하면 컴포넌트가 실제로 필요한 상태만 구독하여 불필요한 리랜더링을 방지할 수 있습니다. 이는 특히 상태 객체가 크고 복잡하거나, 성능이 중요한 애플리케이션에서 렌더링 최적화에 큰 도움이 됩니다.",
+    "subtitle2": "파생 상태",
+    "2": "선택자 함수는 필요한 상태만을 구독하여 불필요한 리렌더링을 방지할 뿐 아니라, 기존 상태를 변형하거나 계산하여 새로운 파생 상태를 만들 수도 있습니다.<br></br><br></br>예를 들어, 장바구니 아이템 목록에서 총 가격을 계산하거나, 사용자 데이터에서 성인 여부를 판단하는 등 복잡한 로직을 컴포넌트 외부로 분리할 수 있습니다. 이러한 접근 방식은 UI 컴포넌트를 더 간결하게 유지하고, 상태 로직을 재사용 가능한 형태로 관리할 수 있게 해줍니다.",
+    "subtitle3": "readOnly와 writeOnly 메서드",
+    "3": "useStore는 <cd>[value, setValue]</cd> 로 이루어진 튜플을 리턴합니다. 그런데 꼭 그래야 할까요? 지금까지 살펴본 <cd>ProfileCard</cd> 컴포넌트는 상태를 가져와 사용할 뿐, 상태를 변경하는 기능은 필요하지 않습니다. 이런 경우 <cd>setValue</cd> 함수는 사용되지 않아 불필요한 자원이 될 수 있습니다.<br></br><br></br>이러한 상황을 해결하기 위해 useStore는 <cd>readOnly</cd>와 <cd>writeOnly</cd> 메서드를 제공합니다. readOnly 메서드는 상태를 읽기만 하는 컴포넌트를 위한 것으로, 상태 값만 반환하고 업데이트 함수는 제공하지 않습니다. 반대로 writeOnly 메서드는 상태를 변경만 하고 구독은 하지 않을 때 사용할 수 있습니다. 이를 통해 컴포넌트의 실제 필요에 맞게 최적화된 인터페이스를 사용할 수 있습니다."
+  },
+  "provider": {
+    "title": "Provider",
+    "0": "useStore에는 특별한 메서드가 하나 더 숨겨져있습니다. Provider 메서드는 caro-kann에서 제공하는 특별한 기능으로, 동일한 store를 사용하면서도 독립적인 상태 트리를 구성할 수 있게 해줍니다. 이 기능을 통해 애플리케이션 내에서 같은 store의 서로 다른 인스턴스를 생성하고 관리할 수 있습니다.<br></br><br></br>Provider는 리액트 컴포넌트처럼 동작하며, store를 props로 받습니다. useStore는 create를 통해 생성된 store에 접근하는 수단이지, store 그 자체는 아닙니다. 따라서 caro-kann은 useStore 대신 store를 직접 리턴하는 createStore 함수를 제공합니다. 이를 통해 특정 컴포넌트 트리에 독립적인 상태를 제공할 수 있습니다.",
+    "subtitle1": "활용 사례",
+    "1": "provider는 다음과 같은 상황에서 특히 유용합니다:",
+    "2": "provider를 통해 상태 관리의 유연성을 크게 향상시킬 수 있으며, 복잡한 애플리케이션에서 상태의 격리와 재사용성을 모두 달성할 수 있습니다.",
+    "subtitle2": "provider와 middleware",
+    "3": "나중에 자세히 살펴보겠지만 caro-kann의 middleware는 create와 createStore에 추가적인 기능을 부여합니다. 그리고 Provider는 스토어의 타입이 같다면 어떤 미들웨어를 어떤 순서로 사용하든 문제없이 동작합니다. 심지어 아래 예시처럼 create와 createStore에 서로 다른 미들웨어를 적용해도 정상적으로 작동합니다.",
+    "4": "하지만 여기에는 한 가지 예외가 있습니다. create 함수에 reducer 미들웨어를 사용했다면 createStore 함수에도 동일하게 reducer 미들웨어를 사용해야 하며, 그 반대의 경우도 마찬가지입니다. 이는 reducer 미들웨어가 스토어의 상태를 변경하는 핵심 함수인 setValue의 동작 방식을 수정하기 때문입니다. 따라서 create와 createStore 간에 reducer 미들웨어 사용 여부가 일치하지 않으면, 상태 업데이트 로직에 예상치 못한 문제가 발생할 수 있습니다.<br></br><br></br>다행히 타입스크립트를 사용하면 caro-kann은 내부적으로 각각의 스토어에 적용된 미들웨어를 자동으로 파악합니다. 만약 reducer 미들웨어 사용에 불일치가 감지될 경우, 다음과 같은 경고 메시지를 통해 개발자에게 알려줍니다.",
+    "5": "\"Warning: Reducer usage must be consistent. Both should use reducers, or neither should.\"",
+    "6": "이를 통해 개발 과정에서 발생할 수 있는 잠재적인 오류를 미리 방지할 수 있도록 돕습니다.",
+    "list": {
+      "0": "테스트 환경: 각 테스트마다 독립적인 상태를 제공하여 격리된 테스트를 수행할 수 있습니다.",
+      "1": "다중 인스턴스 컴포넌트: 같은 컴포넌트가 여러 번 사용되지만 서로 독립적인 상태를 가져야 하는 경우",
+      "2": "테마 관리: 애플리케이션의 다른 부분에서 서로 다른 테마 설정을 사용해야 하는 경우",
+      "3": "사용자별 설정: 다중 사용자 인터페이스에서 각 사용자마다 독립적인 상태 관리가 필요한 경우"
     }
   }
 }
