--- a/src/shared/i18n/messages/ko/caro-kann.json
+++ b/src/shared/i18n/messages/ko/caro-kann.json
@@ -96,10 +96,13 @@
     "5": "\"Warning: Reducer usage must be consistent. Both should use reducers, or neither should.\"",
     "6": "이를 통해 개발 과정에서 발생할 수 있는 잠재적인 오류를 미리 방지할 수 있도록 돕습니다.",
     "list": {
-      "0": "테스트 환경: 각 테스트마다 독립적인 상태를 제공하여 격리된 테스트를 수행할 수 있습니다.",
-      "1": "다중 인스턴스 컴포넌트: 같은 컴포넌트가 여러 번 사용되지만 서로 독립적인 상태를 가져야 하는 경우",
-      "2": "테마 관리: 애플리케이션의 다른 부분에서 서로 다른 테마 설정을 사용해야 하는 경우",
-      "3": "사용자별 설정: 다중 사용자 인터페이스에서 각 사용자마다 독립적인 상태 관리가 필요한 경우"
+      "0": "<b>테스트 환경</b>: 각 테스트마다 독립적인 상태를 제공하여 격리된 테스트를 수행할 수 있습니다.",
+      "1": "<b>다중 인스턴스 컴포넌트</b>: 같은 컴포넌트가 여러 번 사용되지만 서로 독립적인 상태를 가져야 하는 경우",
+      "2": "<b>테마 관리</b>: 애플리케이션의 다른 부분에서 서로 다른 테마 설정을 사용해야 하는 경우",
+      "3": "<b>사용자별 설정</b>: 다중 사용자 인터페이스에서 각 사용자마다 독립적인 상태 관리가 필요한 경우"
     }
+  },
+  "adaptor": {
+    "title": "adaptor 함수"
   }
 }
