--- a/src/shared/i18n/messages/ko/caro-kann.json
+++ b/src/shared/i18n/messages/ko/caro-kann.json
@@ -139,5 +139,42 @@
       "7": "<b>React 훅 규칙</b>: merge 함수 내부적으로 각 useStore의 컨텍스트 값을 가져오기 위해 useContext를 사용하고 있습니다. React 훅은 반복문이나 조건문 내에서 호출될 수 없다는 규칙이 있어, 동적으로 무한한 수의 컨텍스트를 처리하는 데 제약이 따릅니다.",
       "8": "<b>성능 고려</b>: 이론적으로 더 많은 스토어를 병합할 수 있도록 구현할 수도 있겠지만, 병합하는 스토어의 수가 늘어날수록 내부적으로 처리해야 할 로직이 복잡해지고, 상태 변경 시 구독 및 업데이트 과정에서 잠재적인 성능 저하가 발생할 수 있습니다. 8개라는 제한은 사용성과 성능 사이의 균형을 고려한 결정으로 볼 수 있습니다."
     }
+  },
+  "middlewares": {
+    "logger": {
+      "0": "logger 미들웨어는 <cd>NODE_ENV=production</cd> 환경에서 자동으로 비활성화되어, 프로덕션 빌드에 불필요한 코드가 포함되거나 성능에 영향을 미치는 것을 방지합니다.",
+      "1": "logger 미들웨어를 사용하면 애플리케이션의 상태 변화를 실시간으로 추적하고 디버깅할 수 있습니다. 이 미들웨어는 상태가 업데이트될 때마다 이전 상태와 새로운 상태를 콘솔에 로깅하여 개발 과정에서 상태 변화를 쉽게 파악할 수 있도록 도와줍니다.",
+      "2": "타임스탬프 표시, 상태 변경 사항의 차이점(diff) 확인, 로그 그룹 접기/펼치기(collapsed) 등의 다양한 옵션을 지원하여 개발자의 필요에 맞게 로그 출력을 조정할 수 있습니다. 특히 복잡한 상태 관리가 필요한 애플리케이션에서 버그를 식별하고 상태 흐름을 이해하는 데 매우 유용합니다."
+    },
+    "devtools": {
+      "0": "devtools 미들웨어는 <cd>NODE_ENV=production</cd> 환경에서 자동으로 비활성화되어, 프로덕션 빌드에 불필요한 코드가 포함되거나 성능에 영향을 미치는 것을 방지합니다.",
+      "1": "devtools 미들웨어를 사용하면 상태 관리가 더욱 직관적이고 효율적으로 이루어집니다. 이 미들웨어는 Redux DevTools 확장 프로그램을 통해 애플리케이션의 상태 변화를 실시간으로 추적할 수 있게 해줍니다. 개발자는 상태가 어떻게 변경되는지 명확히 알 수 있으며, 이를 통해 디버깅과 최적화가 용이해집니다.",
+      "2": "예를 들어, devtools 미들웨어를 사용하여 count 상태를 관리하는 예시는 다음과 같이 실시간으로 상태 변화를 관찰하고, 버튼 클릭 시 상태를 증가시키거나 감소시킬 때마다 Redux DevTools에서 변화가 기록되는 모습을 확인할 수 있습니다. 이 방식은 특히 복잡한 상태 관리 및 디버깅을 단순화하고, 개발자의 작업 효율성을 크게 향상시킵니다."
+    },
+    "debounce": {
+      "0": "debounce 미들웨어는 연속적인 상태 업데이트를 효율적으로 관리하는 강력한 도구입니다. 이 미들웨어는 빠르게 연속되는 여러 상태 변경을 일정 시간(기본값 300ms) 동안 모아두었다가, 마지막 이벤트 이후 지정된 시간이 경과하면 한 번에 처리하는 방식으로 작동합니다.<br></br><br></br>특히 검색 입력, 폼 변경, 창 크기 조정과 같이 빈번한 이벤트가 발생하는 상황에서 불필요한 렌더링과 연산을 방지함으로써 애플리케이션의 성능을 크게 향상시킵니다.",
+      "1": "debounce 미들웨어의 진정한 강점은 단순히 마지막 업데이트만 적용하는 것이 아니라, 모든 업데이트를 순차적으로 처리한다는 점에 있습니다. 이는 특히 사용자가 여러 번의 클릭이나 입력을 통해 상태를 변경할 때, 각 액션의 의도를 보존하면서도 성능을 최적화할 수 있게 해줍니다."
+    },
+    "persist": {
+      "0": "persist 미들웨어를 사용하면 caro-kann이 관리하는 전역 상태를 로컬 스토리지, 세션 스토리지, 쿠키 등에 저장할 수 있게 됩니다. 이러한 기능은 웹 페이지의 테마 설정과 같이 사용자가 페이지를 새로 고침하거나 세션이 종료된 후에도 상태를 유지해야 하는 값들에 적합하며, 특히 사용자 경험을 개선하는 데 중요합니다.",
+      "1": "전역 상태를 저장소에 보관할 때, Caro-Kann은 state와 함께 version을 명시합니다. 이를 사용하면 애플리케이션의 상태 구조가 변경되었을 때도 이전 버전의 데이터를 손쉽게 변환하거나 무시할 수 있습니다.",
+      "2": "가령 theme에 배경색 말고도 글꼴 크기에 대한 요구가 추가되어야 한다고 생각해봅시다. Caro-Kann은 이를 처리하기 위해 migrate 배열을 사용합니다. migrate 객체가 존재하면 Caro-Kann은 클라이언트가 서비스에 접속할 때 자동으로 버전 차이를 확인합니다. 만약 클라이언트의 상태가 최신 버전이 아닐 경우에는 배열 내의 적절한 함수를 호출하여 업데이트된 상태를 반환합니다.",
+      "3": "migrate를 사용해서 0버전을 1버전으로 잘 업데이트 했습니다. 그런데 몇 주 뒤, 선임 개발자가 찾아와 글꼴 상태를 나타내는 이름을 font-size로 바꿔야 한다고 합니다. migrate는 클라이언트가 서비스에 접속할 때만 동작하므로, 아직 서비스에 접속하지 않은 유저 클라이언트는 여전히 0 버전인 상태입니다. 따라서 우리는 0버전과 1버전 모두를 해결해야 합니다.<br></br><br></br>이를 위해 migrate 배열은 일종의 파이프처럼 구성됩니다.",
+      "4": "타입스크립트의 도움으로 migrate 파이프는 두 가지 조건을 확인합니다. 우선, 이전 인덱스의 함수가 리턴하는 타입이 그 다음 인덱스에 위치한 함수의 파라미터 타입이 되어야 합니다. 이를 통해 마이그레이션 과정에서 각 단계가 타입적으로 올바르게 연결되어 있는지를 컴파일 타임에 검증할 수 있으며, 타입 불일치로 인한 런타임 오류를 예방할 수 있습니다. 또한, 파이프의 마지막 함수가 반환하는 값의 타입은 현재 애플리케이션이 사용하는 전역 상태 타입과 정확히 일치해야 하므로, 마이그레이션이 완료된 후의 상태가 애플리케이션 로직과 완벽히 호환되도록 보장합니다."
+    },
+    "validate": {
+      "0": "validate 미들웨어는 상태 관리 시 데이터의 타입 안전성을 높이는 유용한 도구입니다. 이 미들웨어는 상태가 변경되기 전, 사전에 정의된 스키마를 기준으로 데이터의 유효성을 먼저 검사합니다. 이를 통해 유효하지 않은 데이터가 애플리케이션 상태에 반영되는 것을 방지하여 상태의 일관성과 안정성을 유지하는 데 도움을 줍니다. 만약 잘못된 상태 변경 시도가 발생하면, 해당 변경을 차단하고 즉시 콘솔에 자세한 오류 정보를 출력하여 디버깅을 용이하게 합니다.",
+      "1": "caro-kann의 validate 미들웨어는 내부적으로 <a><cd>@ilokesto/common-resolver</cd></a>를 활용하여, zod, yup, superstruct와 같이 널리 사용되는 다양한 유효성 검사 라이브러리와 쉽게 연동할 수 있습니다. 덕분에 개발자는 자신이 익숙하거나 프로젝트에 이미 적용된 검증 도구를 그대로 사용하여 상태 데이터의 무결성을 효과적으로 관리할 수 있다는 장점이 있습니다."
+    },
+    "reducer": {
+      "0": "",
+      "1": "",
+      "2": ""
+    },
+    "composition": {
+      "0": "",
+      "1": "",
+      "2": ""
+    }
   }
 }
