--- a/src/shared/i18n/messages/ko/caro-kann.json
+++ b/src/shared/i18n/messages/ko/caro-kann.json
@@ -167,9 +167,8 @@
       "1": "caro-kann의 validate 미들웨어는 내부적으로 <a><cd>@ilokesto/common-resolver</cd></a>를 활용하여, zod, yup, superstruct와 같이 널리 사용되는 다양한 유효성 검사 라이브러리와 쉽게 연동할 수 있습니다. 덕분에 개발자는 자신이 익숙하거나 프로젝트에 이미 적용된 검증 도구를 그대로 사용하여 상태 데이터의 무결성을 효과적으로 관리할 수 있다는 장점이 있습니다."
     },
     "reducer": {
-      "0": "",
-      "1": "",
-      "2": ""
+      "0": "reducer 미들웨어는 상태 관리에서 중앙 집중식 상태 변환을 처리하는 방식으로, 상태의 변경을 예측 가능하고 일관성 있게 유지할 수 있게 합니다. 이 패턴은 주로 Redux에서 사용하는 방식으로, 상태를 불변성을 유지하며 업데이트하도록 설계되어 있습니다. reducer 미들웨어는 주로 액션(action)을 통해 상태를 변경하며, 상태 업데이트 로직을 중앙에서 관리하게 됩니다.",
+      "1": "reducer 미들웨어를 사용하면 useStore는 <cd>[value, setValue]</cd> 대신 <cd>[value, dispatch]</cd> 튜플을 반환합니다. dispatch 함수는 action 객체를 인자로 받으며, 이를 통해 reduceFn의 로직을 트리거하여 상태를 변경할 수 있습니다. reduceFn은 각 액션의 타입에 따라 상태를 업데이트하는 역할을 하며, 액션 객체의 type과 payload를 기반으로 상태를 변경하는 로직을 정의합니다."
     },
     "composition": {
       "0": "",
