feat: 'path-codegen' 라이브러리 추가 및 다국어 지원 업데이트

--- a/src/shared/i18n/messages/en/ilokesto.json
+++ b/src/shared/i18n/messages/en/ilokesto.json
@@ -14,5 +14,8 @@
   },
   "common-resolver": {
     "description": "A small utility that unifies schema validators (Yup, Zod, Superstruct) behind a consistent adapter API, standardizes error shapes, and simplifies integration or migration."
+  },
+  "path-codegen": {
+    "description": "A utility for safely extracting paths from TypeScript types. It supports autocompletion and type-checking even in nested object structures, reducing the risk of errors with string-based path access and enhancing developer experience."
   }
 }
