--- a/src/shared/i18n/messages/ko/ilokesto.json
+++ b/src/shared/i18n/messages/ko/ilokesto.json
@@ -14,5 +14,8 @@
   },
   "common-resolver": {
     "description": "Yup, Zod, Superstruct 등 스키마 검증기를 일관된 어댑터 API로 통합하고 에러 형식을 표준화해 통합 또는 마이그레이션을 단순화하는 소형 유틸리티입니다."
+  },
+  "path-codegen": {
+    "description": "TypeScript 타입에서 안전하게 경로를 추출하는 유틸리티입니다. 중첩된 객체 구조에서도 자동 완성 및 타입 검사를 지원하여, 문자열 기반 경로 접근의 오류 가능성을 줄이고 개발자 경험을 향상시킵니다."
   }
 }
