--- a/src/shared/i18n/messages/ko/caro-kann.json
+++ b/src/shared/i18n/messages/ko/caro-kann.json
@@ -157,8 +157,8 @@
     },
     "persist": {
       "0": "persist 미들웨어를 사용하면 caro-kann이 관리하는 전역 상태를 로컬 스토리지, 세션 스토리지, 쿠키 등에 저장할 수 있게 됩니다. 이러한 기능은 웹 페이지의 테마 설정과 같이 사용자가 페이지를 새로 고침하거나 세션이 종료된 후에도 상태를 유지해야 하는 값들에 적합하며, 특히 사용자 경험을 개선하는 데 중요합니다.",
-      "1": "전역 상태를 저장소에 보관할 때, Caro-Kann은 state와 함께 version을 명시합니다. 이를 사용하면 애플리케이션의 상태 구조가 변경되었을 때도 이전 버전의 데이터를 손쉽게 변환하거나 무시할 수 있습니다.",
-      "2": "가령 theme에 배경색 말고도 글꼴 크기에 대한 요구가 추가되어야 한다고 생각해봅시다. Caro-Kann은 이를 처리하기 위해 migrate 배열을 사용합니다. migrate 객체가 존재하면 Caro-Kann은 클라이언트가 서비스에 접속할 때 자동으로 버전 차이를 확인합니다. 만약 클라이언트의 상태가 최신 버전이 아닐 경우에는 배열 내의 적절한 함수를 호출하여 업데이트된 상태를 반환합니다.",
+      "1": "전역 상태를 저장소에 보관할 때, caro-kann은 state와 함께 version을 명시합니다. 이를 사용하면 애플리케이션의 상태 구조가 변경되었을 때도 이전 버전의 데이터를 손쉽게 변환하거나 무시할 수 있습니다.",
+      "2": "가령 theme에 배경색 말고도 글꼴 크기에 대한 요구가 추가되어야 한다고 생각해봅시다. caro-kann은 이를 처리하기 위해 migrate 배열을 사용합니다. migrate 객체가 존재하면 caro-kann은 클라이언트가 서비스에 접속할 때 자동으로 버전 차이를 확인합니다. 만약 클라이언트의 상태가 최신 버전이 아닐 경우에는 배열 내의 적절한 함수를 호출하여 업데이트된 상태를 반환합니다.",
       "3": "migrate를 사용해서 0버전을 1버전으로 잘 업데이트 했습니다. 그런데 몇 주 뒤, 선임 개발자가 찾아와 글꼴 상태를 나타내는 이름을 font-size로 바꿔야 한다고 합니다. migrate는 클라이언트가 서비스에 접속할 때만 동작하므로, 아직 서비스에 접속하지 않은 유저 클라이언트는 여전히 0 버전인 상태입니다. 따라서 우리는 0버전과 1버전 모두를 해결해야 합니다.<br></br><br></br>이를 위해 migrate 배열은 일종의 파이프처럼 구성됩니다.",
       "4": "타입스크립트의 도움으로 migrate 파이프는 두 가지 조건을 확인합니다. 우선, 이전 인덱스의 함수가 리턴하는 타입이 그 다음 인덱스에 위치한 함수의 파라미터 타입이 되어야 합니다. 이를 통해 마이그레이션 과정에서 각 단계가 타입적으로 올바르게 연결되어 있는지를 컴파일 타임에 검증할 수 있으며, 타입 불일치로 인한 런타임 오류를 예방할 수 있습니다. 또한, 파이프의 마지막 함수가 반환하는 값의 타입은 현재 애플리케이션이 사용하는 전역 상태 타입과 정확히 일치해야 하므로, 마이그레이션이 완료된 후의 상태가 애플리케이션 로직과 완벽히 호환되도록 보장합니다."
     },
@@ -172,11 +172,11 @@
     },
     "composition": {
       "title": "미들웨어 합성",
-      "0": "reducer 미들웨어를 제외한 Caro-Kann의 다른 모든 미들웨어들은 <b>조건 없이 자유롭게 합성(composition)</b> 이 가능합니다. 이는 여러 미들웨어를 중첩하여 사용할 때, 각 미들웨어가 서로 간섭하지 않고 독립적으로 동작한다는 것을 의미합니다.<br></br><br></br>예를 들어, logger, validate, debounce 미들웨어를 함께 사용할 경우, 상태 변경은 먼저 validate를 통해 유효성이 검증되고, 이후 debounce로 최적화된 시점에 적용되며, 마지막으로 logger를 통해 콘솔에 로깅되는 방식으로 자연스러운 흐름이 보장됩니다. 이러한 미들웨어 합성은 개발자가 다양한 기능을 유연하게 조합하여 상태 관리의 정확성과 성능을 동시에 확보할 수 있도록 돕습니다.<br></br><br></br>다른 미들웨어들과 달리, reducer 미들웨어는 오직 create 함수 바로 아래에만 위치할 수 있습니다. 이는 reducer가 setState 대신 dispatch를 반환하기 때문입니다.",
+      "0": "reducer 미들웨어를 제외한 caro-kann의 다른 모든 미들웨어들은 <b>조건 없이 자유롭게 합성(composition)</b> 이 가능합니다. 이는 여러 미들웨어를 중첩하여 사용할 때, 각 미들웨어가 서로 간섭하지 않고 독립적으로 동작한다는 것을 의미합니다.<br></br><br></br>예를 들어, logger, validate, debounce 미들웨어를 함께 사용할 경우, 상태 변경은 먼저 validate를 통해 유효성이 검증되고, 이후 debounce로 최적화된 시점에 적용되며, 마지막으로 logger를 통해 콘솔에 로깅되는 방식으로 자연스러운 흐름이 보장됩니다. 이러한 미들웨어 합성은 개발자가 다양한 기능을 유연하게 조합하여 상태 관리의 정확성과 성능을 동시에 확보할 수 있도록 돕습니다.<br></br><br></br>다른 미들웨어들과 달리, reducer 미들웨어는 오직 create 함수 바로 아래에만 위치할 수 있습니다. 이는 reducer가 setState 대신 dispatch를 반환하기 때문입니다.",
       "subtitle1": "합성 결과 이해하기",
       "1": "대부분의 미들웨어는 별다른 제약 없이 자유롭게 합성할 수 있습니다. 개발자는 원하는 순서대로 미들웨어를 구성할 수 있으며, 이 과정에서 특별한 조건을 고려하지 않아도 되는 경우가 많습니다. 그러나 미들웨어를 어떤 방식으로, 어떤 순서로 합성하느냐에 따라 실행 결과가 크게 달라질 수도 있고, 전혀 영향을 미치지 않을 수도 있습니다.<br></br><br></br>예를 들어, 아래와 같은 경우에는 persist와 validate 미들웨어의 실행 순서에 관계없이 항상 동일한 결과를 보장합니다. 이는 두 미들웨어가 서로의 동작에 영향을 주지 않기 때문입니다.",
       "2": "반면, 아래 예제에서는 debounce와 logger 미들웨어의 합성 순서에 따라 동작이 달라집니다. logger가 먼저 실행되면 디바운싱 이전의 모든 상태 변경 로그가 기록되며, 반대로 debounce가 먼저 실행되면 일정 시간 내 중복된 상태 변경은 무시되고 최종 변경만 로깅됩니다. 이처럼 일부 미들웨어는 서로의 동작 방식에 영향을 주기 때문에, 합성 순서를 결정할 때 그 의미를 충분히 고려해야 합니다.",
-      "3": "미들웨어 합성 결과를 이해하기 위해서는 실제로 Caro-Kann이 미들웨어를 어떻게 적용하고 처리하는지를 살펴보는 것이 중요합니다. Caro-Kann에서는 각 미들웨어가 상태를 감싸며 순차적으로 실행되기 때문에, 앞서 적용된 미들웨어의 반환값이 다음 미들웨어의 입력으로 전달됩니다. 이처럼 함수형 방식으로 미들웨어가 중첩되므로, 각 미들웨어가 검증, 저장 등 어떤 역할을 수행하는지와 그 순서에 따라 최종 동작이 달라질 수 있습니다. 따라서 미들웨어의 목적과 상호작용을 명확히 이해한 후에 적절한 순서를 정하는 것이 바람직합니다."
+      "3": "미들웨어 합성 결과를 이해하기 위해서는 실제로 caro-kann이 미들웨어를 어떻게 적용하고 처리하는지를 살펴보는 것이 중요합니다. caro-kann에서는 각 미들웨어가 상태를 감싸며 순차적으로 실행되기 때문에, 앞서 적용된 미들웨어의 반환값이 다음 미들웨어의 입력으로 전달됩니다. 이처럼 함수형 방식으로 미들웨어가 중첩되므로, 각 미들웨어가 검증, 저장 등 어떤 역할을 수행하는지와 그 순서에 따라 최종 동작이 달라질 수 있습니다. 따라서 미들웨어의 목적과 상호작용을 명확히 이해한 후에 적절한 순서를 정하는 것이 바람직합니다."
     }
   }
 }
